5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4384/executions/1691_2471.log
== TEST (2019-06-04 19:26:20) 
-- CODE:
i=int(input("digite a idade: "))
imc=int(input("digitep imc: "))
if(i<45) and (imc<22):
	print("baixo")
elif(i>=45) and (imc<22):
	print("medio")
elif(i<45) and (imc>=22):
	print("medio")
elif(i>=45) and (imc>=22):
	print("baixo")
-- OUTPUT:
baixo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-04 19:26:40) 
-- CODE:
i=int(input("digite a idade: "))
imc=int(input("digitep imc: "))
if(i<45) and (imc<22):
	print("baixo")
elif(i>=45) and (imc<22):
	print("medio")
elif(i<45) and (imc>=22):
	print("medio")
elif(i>=45) and (imc>=22):
	print("baixo")
-- EXECUTION TIME:
0.699373
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
baixo
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
medio
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
baixo
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 19:27:41) 
-- CODE:
i=int(input("digite a idade: "))
imc=int(input("digitep imc: "))
if(i<45) and (imc<22):
	x"baixo"
elif(i>=45) and (imc<22):
	x="medio"
elif(i<45) and (imc>=22):
	x"medio"x
elif(i>=45) and (imc>=22):
	x="baixo"
print("Risco:" x)
-- ERROR:
File "XXXX", line 4
    x"baixo"
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 19:27:48) 
-- CODE:
i=int(input("digite a idade: "))
imc=int(input("digitep imc: "))
if(i<45) and (imc<22):
	x"baixo"
elif(i>=45) and (imc<22):
	x="medio"
elif(i<45) and (imc>=22):
	x="medio"x
elif(i>=45) and (imc>=22):
	x="baixo"
print("Risco:" x)
-- ERROR:
File "XXXX", line 4
    x"baixo"
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 19:27:54) 
-- CODE:
i=int(input("digite a idade: "))
imc=int(input("digitep imc: "))
if(i<45) and (imc<22):
	x="baixo"
elif(i>=45) and (imc<22):
	x="medio"
elif(i<45) and (imc>=22):
	x="medio"x
elif(i>=45) and (imc>=22):
	x="baixo"
print("Risco:" x)
-- ERROR:
File "XXXX", line 8
    x="medio"x
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 19:27:59) 
-- CODE:
i=int(input("digite a idade: "))
imc=int(input("digitep imc: "))
if(i<45) and (imc<22):
	x="baixo"
elif(i>=45) and (imc<22):
	x="medio"
elif(i<45) and (imc>=22):
	x="medio"
elif(i>=45) and (imc>=22):
	x="baixo"
print("Risco:" x)
-- ERROR:
File "XXXX", line 11
    print("Risco:" x)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 19:28:06) 
-- CODE:
i=int(input("digite a idade: "))
imc=int(input("digitep imc: "))
if(i<45) and (imc<22):
	x="baixo"
elif(i>=45) and (imc<22):
	x="medio"
elif(i<45) and (imc>=22):
	x="medio"
elif(i>=45) and (imc>=22):
	x="baixo"
print("Risco:",x)
-- OUTPUT:
Risco: baixo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-04 19:28:14) 
-- CODE:
i=int(input("digite a idade: "))
imc=int(input("digitep imc: "))
if(i<45) and (imc<22):
	x="baixo"
elif(i>=45) and (imc<22):
	x="medio"
elif(i<45) and (imc>=22):
	x="medio"
elif(i>=45) and (imc>=22):
	x="baixo"
print("Risco:",x)
-- EXECUTION TIME:
0.838587
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Risco: baixo
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Risco: medio
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Risco: baixo
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 19:28:16) 
-- CODE:
i=int(input("digite a idade: "))
imc=int(input("digitep imc: "))
if(i<45) and (imc<22):
	x="baixo"
elif(i>=45) and (imc<22):
	x="medio"
elif(i<45) and (imc>=22):
	x="medio"
elif(i>=45) and (imc>=22):
	x="baixo"
print("Risco:",x)
-- OUTPUT:
Risco: baixo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 19:28:28) 
-- CODE:
i=int(input("digite a idade: "))
imc=int(input("digitep imc: "))
if(i<45) and (imc<22):
	x="Baixo"
elif(i>=45) and (imc<22):
	x="Medio"
elif(i<45) and (imc>=22):
	x="Medio"
elif(i>=45) and (imc>=22):
	x="Baixo"
print("Risco:",x)
-- OUTPUT:
Risco: Baixo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-04 19:28:37) 
-- CODE:
i=int(input("digite a idade: "))
imc=int(input("digitep imc: "))
if(i<45) and (imc<22):
	x="Baixo"
elif(i>=45) and (imc<22):
	x="Medio"
elif(i<45) and (imc>=22):
	x="Medio"
elif(i>=45) and (imc>=22):
	x="Baixo"
print("Risco:",x)
-- EXECUTION TIME:
0.64743
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Risco: Baixo
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Risco: Medio
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Risco: Baixo
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 19:29:08) 
-- CODE:
i=int(input("digite a idade: "))
imc=float(input("digitep imc: "))
if(i<45) and (imc<22):
	x="Baixo"
elif(i>=45) and (imc<22):
	x="Medio"
elif(i<45) and (imc>=22):
	x="Medio"
elif(i>=45) and (imc>=22):
	x="Baixo"
print("Risco:",x)
-- OUTPUT:
Risco: Baixo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-04 19:29:19) 
-- CODE:
i=int(input("digite a idade: "))
imc=float(input("digitep imc: "))
if(i<45) and (imc<22):
	x="Baixo"
elif(i>=45) and (imc<22):
	x="Medio"
elif(i<45) and (imc>=22):
	x="Medio"
elif(i>=45) and (imc>=22):
	x="Baixo"
print("Risco:",x)
-- EXECUTION TIME:
0.938571
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Risco: Baixo
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Risco: Medio
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Risco: Baixo
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 23:17:06) 
-- CODE:
i=int(input("digite a idade: "))
imc=float(input("digitep imc: "))
if(i<45) and (imc<22):
	x="Baixo"
elif(i>=45) and (imc<22):
	x="Medio"
elif(i<45) and (imc>=22):
	x="Medio"
elif(i>=45) and (imc>=22):
	x="Baixo"
print("entradas",i"anos e",imc)
print("Risco:",x)
-- ERROR:
File "XXXX", line 11
    print("entradas",i"anos e",imc)
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 23:17:44) 
-- CODE:
i=int(input("digite a idade: "))
imc=float(input("digitep imc: "))
if(i<45) and (imc<22):
	x="Baixo"
elif(i>=45) and (imc<22):
	x="Medio"
elif(i<45) and (imc>=22):
	x="Medio"
elif(i>=45) and (imc>=22):
	x="Baixo"
print("entradas", i"anos e", imc)
print("Risco:",x)
-- ERROR:
File "XXXX", line 11
    print("entradas", i"anos e", imc)
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 23:18:20) 
-- CODE:
i=int(input("digite a idade: "))
imc=float(input("digitep imc: "))
if(i<45) and (imc<22):
	x="Baixo"
elif(i>=45) and (imc<22):
	x="Medio"
elif(i<45) and (imc>=22):
	x="Medio"
elif(i>=45) and (imc>=22):
	x="Baixo"
print("entradas" i"anos e"imc)
print("Risco:",x)
-- ERROR:
File "XXXX", line 11
    print("entradas" i"anos e"imc)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 23:19:09) 
-- CODE:
i=int(input("digite a idade: "))
imc=float(input("digitep imc: "))
if(i<45) and (imc<22):
	x="Baixo"
elif(i>=45) and (imc<22):
	x="Medio"
elif(i<45) and (imc>=22):
	x="Medio"
elif(i>=45) and (imc>=22):
	x="Baixo"
print((("entradas",i)("anos e"imc)))
print("Risco:",x)
-- ERROR:
File "XXXX", line 11
    print((("entradas",i)("anos e"imc)))
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 23:19:16) 
-- CODE:
i=int(input("digite a idade: "))
imc=float(input("digitep imc: "))
if(i<45) and (imc<22):
	x="Baixo"
elif(i>=45) and (imc<22):
	x="Medio"
elif(i<45) and (imc>=22):
	x="Medio"
elif(i>=45) and (imc>=22):
	x="Baixo"
print((("entradas",i)("anos e",imc)))
print("Risco:",x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print((("entradas",i)("anos e",imc)))
TypeError: 'tuple' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 23:19:46) 
-- CODE:
i=int(input("digite a idade: "))
imc=float(input("digitep imc: "))
if(i<45) and (imc<22):
	x="Baixo"
elif(i>=45) and (imc<22):
	x="Medio"
elif(i<45) and (imc>=22):
	x="Medio"
elif(i>=45) and (imc>=22):
	x="Baixo"
print("entradas",i,"anos e",imc)
print("Risco:",x)
-- OUTPUT:
entradas 0 anos e 0.0
Risco: Baixo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-04 23:20:01) 
-- CODE:
i=int(input("digite a idade: "))
imc=float(input("digitep imc: "))
if(i<45) and (imc<22):
	x="Baixo"
elif(i>=45) and (imc<22):
	x="Medio"
elif(i<45) and (imc>=22):
	x="Medio"
elif(i>=45) and (imc>=22):
	x="Baixo"
print("entradas",i,"anos e",imc)
print("Risco:",x)
-- EXECUTION TIME:
0.806431
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
entradas 0 anos e 0.0
Risco: Baixo
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
entradas 25 anos e 25.0
Risco: Medio
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
entradas 50 anos e 25.0
Risco: Baixo
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 23:21:00) 
-- CODE:
i=int(input("digite a idade: "))
IMC=float(input("digitep imc: "))
if(i<45) and (imc<22):
	x="Baixo"
elif(i>=45) and (imc<22):
	x="Medio"
elif(i<45) and (imc>=22):
	x="Medio"
elif(i>=45) and (imc>=22):
	x="Baixo"
print("Entradas",i,"anos e",IMC)
print("Risco:",x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(i<45) and (imc<22):
NameError: name 'imc' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-04 23:21:04) 
-- CODE:
i=int(input("digite a idade: "))
IMC=float(input("digitep imc: "))
if(i<45) and (imc<22):
	x="Baixo"
elif(i>=45) and (imc<22):
	x="Medio"
elif(i<45) and (imc>=22):
	x="Medio"
elif(i>=45) and (imc>=22):
	x="Baixo"
print("Entradas",i,"anos e",IMC)
print("Risco:",x)
-- EXECUTION TIME:
0.80704
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1691/2471/main.py", line 3, in <module>
    if(i<45) and (imc<22):
NameError: name 'imc' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 23:27:40) 
-- CODE:
i=int(input("digite a idade: "))
IMC=float(input("digitep imc: "))
if(i<=0) ou (i>130)
print("Entradas",i,"anos e",IMC)
print("Dados invalidos")
	elif(i<45) and (imc<22):
		x="Baixo"
	elif(i>=45) and (imc<22):
		x="Medio"
	elif(i<45) and (imc>=22):
		x="Medio"
	elif(i>=45) and (imc>=22):
		x="Baixo"
	print("Entradas",i,"anos e",IMC)
	print("Risco:",x)
-- ERROR:
File "XXXX", line 3
    if(i<=0) ou (i>130)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 23:27:55) 
-- CODE:
i=int(input("digite a idade: "))
IMC=float(input("digitep imc: "))
if(i<=0) ou (i>130):
print("Entradas",i,"anos e",IMC)
print("Dados invalidos")
	elif(i<45) and (imc<22):
		x="Baixo"
	elif(i>=45) and (imc<22):
		x="Medio"
	elif(i<45) and (imc>=22):
		x="Medio"
	elif(i>=45) and (imc>=22):
		x="Baixo"
	print("Entradas",i,"anos e",IMC)
	print("Risco:",x)
-- ERROR:
File "XXXX", line 3
    if(i<=0) ou (i>130):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 23:28:06) 
-- CODE:
i=int(input("digite a idade: "))
IMC=float(input("digitep imc: "))
if(i<=0) or (i>130):
print("Entradas",i,"anos e",IMC)
print("Dados invalidos")
	elif(i<45) and (imc<22):
		x="Baixo"
	elif(i>=45) and (imc<22):
		x="Medio"
	elif(i<45) and (imc>=22):
		x="Medio"
	elif(i>=45) and (imc>=22):
		x="Baixo"
	print("Entradas",i,"anos e",IMC)
	print("Risco:",x)
-- ERROR:
File "XXXX", line 4
    print("Entradas",i,"anos e",IMC)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 23:28:48) 
-- CODE:
i=int(input("digite a idade: "))
IMC=float(input("digitep imc: "))
if(i<=0) or (i>130):
print("Entradas",i,"anos e",IMC)
print("Dados invalidos")
	elif(i<45) and (imc<22):
		x="Baixo"
	elif(i>=45) and (imc<22):
		x="Medio"
	elif(i<45) and (imc>=22):
		x="Medio"
	elif(i>=45) and (imc>=22):
		x="Baixo"
	print("Entradas",i,"anos e",IMC)
	print("Risco:",x)
-- ERROR:
File "XXXX", line 4
    print("Entradas",i,"anos e",IMC)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 23:29:02) 
-- CODE:
i=int(input("digite a idade: "))
IMC=float(input("digitep imc: "))
if(i<=0) or (i>130):
print("Entradas",i,"anos e",IMC)
print("Dados invalidos")
	elif(i<45) and (imc<22):
		x="Baixo"
	elif(i>=45) and (imc<22):
		x="Medio"
	elif(i<45) and (imc>=22):
		x="Medio"
	elif(i>=45) and (imc>=22):
		x="Baixo"
	print("Entradas",i,"anos e",IMC)
	print("Risco:",x)
-- ERROR:
File "XXXX", line 4
    print("Entradas",i,"anos e",IMC)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 23:29:47) 
-- CODE:
i=int(input("digite a idade: "))
IMC=float(input("digitep imc: "))
if(i<=0) or (i>130):
	print("Entradas",i,"anos e",IMC)
	print("Dados invalidos")
elif(i<45) and (imc<22):
	x="Baixo"
elif(i>=45) and (imc<22):
	x="Medio"
elif(i<45) and (imc>=22):
	x="Medio"
elif(i>=45) and (imc>=22):
	x="Baixo"
print("Entradas",i,"anos e",IMC)
print("Risco:",x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    print("Risco:",x)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 23:30:37) 
-- CODE:
i=int(input("digite a idade: "))
IMC=float(input("digitep imc: "))
if(i<=0) or (i>130):
	print("Entradas",i,"anos e",IMC)
	print("Dados invalidos")
elif(i<45) and (IMC<22):
	x="Baixo"
elif(i>=45) and (IMC<22):
	x="Medio"
elif(i<45) and (IMC>=22):
	x="Medio"
elif(i>=45) and (IMC>=22):
	x="Baixo"
print("Entradas",i,"anos e",IMC)
print("Risco:",x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    print("Risco:",x)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-04 23:30:50) 
-- CODE:
i=int(input("digite a idade: "))
IMC=float(input("digitep imc: "))
if(i<=0) or (i>130):
	print("Entradas",i,"anos e",IMC)
	print("Dados invalidos")
elif(i<45) and (IMC<22):
	x="Baixo"
elif(i>=45) and (IMC<22):
	x="Medio"
elif(i<45) and (IMC>=22):
	x="Medio"
elif(i>=45) and (IMC>=22):
	x="Baixo"
print("Entradas",i,"anos e",IMC)
print("Risco:",x)
-- EXECUTION TIME:
0.624195
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1691/2471/main.py", line 15, in <module>
    print("Risco:",x)
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 23:31:05) 
-- CODE:
i=int(input("digite a idade: "))
IMC=float(input("digitep imc: "))
if(i<=0) or (i>130):
	print("Entradas",i,"anos e",IMC)
	print("Dados invalidos")
elif(i<45) and (IMC<22):
	x="Baixo"
elif(i>=45) and (IMC<22):
	x="Medio"
elif(i<45) and (IMC>=22):
	x="Medio"
elif(i>=45) and (IMC>=22):
	x="Baixo"
print("Entradas",i,"anos e",IMC)
print("Risco:",x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    print("Risco:",x)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-04 23:31:07) 
-- CODE:
i=int(input("digite a idade: "))
IMC=float(input("digitep imc: "))
if(i<=0) or (i>130):
	print("Entradas",i,"anos e",IMC)
	print("Dados invalidos")
elif(i<45) and (IMC<22):
	x="Baixo"
elif(i>=45) and (IMC<22):
	x="Medio"
elif(i<45) and (IMC>=22):
	x="Medio"
elif(i>=45) and (IMC>=22):
	x="Baixo"
print("Entradas",i,"anos e",IMC)
print("Risco:",x)
-- EXECUTION TIME:
0.75425
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1691/2471/main.py", line 15, in <module>
    print("Risco:",x)
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-04 23:31:08) 
-- CODE:
i=int(input("digite a idade: "))
IMC=float(input("digitep imc: "))
if(i<=0) or (i>130):
	print("Entradas",i,"anos e",IMC)
	print("Dados invalidos")
elif(i<45) and (IMC<22):
	x="Baixo"
elif(i>=45) and (IMC<22):
	x="Medio"
elif(i<45) and (IMC>=22):
	x="Medio"
elif(i>=45) and (IMC>=22):
	x="Baixo"
print("Entradas",i,"anos e",IMC)
print("Risco:",x)
-- EXECUTION TIME:
1.89849
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1691/2471/main.py", line 15, in <module>
    print("Risco:",x)
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 23:31:47) 
-- CODE:
i=int(input("digite a idade: "))
IMC=float(input("digitep imc: "))
if(i<=0) or (i>130):
	print("Entradas",i,"anos e",IMC)
	print("Dados invalidos")
elif(i<45) and (IMC<22):
	x="Baixo"
elif(i>=45) and (IMC<22):
	x="Medio"
elif(i<45) and (IMC>=22):
	x="Medio"
elif(i>=45) and (IMC>=22):
	x="Baixo"
print("Entradas",i,"anos e IMC",IMC)
print("Risco:",x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    print("Risco:",x)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-04 23:31:58) 
-- CODE:
i=int(input("digite a idade: "))
IMC=float(input("digitep imc: "))
if(i<=0) or (i>130):
	print("Entradas",i,"anos e",IMC)
	print("Dados invalidos")
elif(i<45) and (IMC<22):
	x="Baixo"
elif(i>=45) and (IMC<22):
	x="Medio"
elif(i<45) and (IMC>=22):
	x="Medio"
elif(i>=45) and (IMC>=22):
	x="Baixo"
print("Entradas",i,"anos e IMC",IMC)
print("Risco:",x)
-- EXECUTION TIME:
0.671589
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1691/2471/main.py", line 15, in <module>
    print("Risco:",x)
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 23:32:05) 
-- CODE:
i=int(input("digite a idade: "))
IMC=float(input("digitep imc: "))
if(i<=0) or (i>130):
	print("Entradas",i,"anos e",IMC)
	print("Dados invalidos")
elif(i<45) and (IMC<22):
	x="Baixo"
elif(i>=45) and (IMC<22):
	x="Medio"
elif(i<45) and (IMC>=22):
	x="Medio"
elif(i>=45) and (IMC>=22):
	x="Baixo"
print("Entradas",i,"anos e IMC",IMC)
print("Risco:",x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    print("Risco:",x)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 23:32:42) 
-- CODE:
i=int(input("digite a idade: "))
IMC=float(input("digitep imc: "))
if(i<=0) or (i>130):
	print("Entradas:",i,"anos e IMC",IMC)
	print("Dados invalidos")
elif(i<45) and (IMC<22):
	x="Baixo"
elif(i>=45) and (IMC<22):
	x="Medio"
elif(i<45) and (IMC>=22):
	x="Medio"
elif(i>=45) and (IMC>=22):
	x="Baixo"
print("Entradas:",i,"anos e IMC",IMC)
print("Risco:",x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    print("Risco:",x)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-04 23:32:53) 
-- CODE:
i=int(input("digite a idade: "))
IMC=float(input("digitep imc: "))
if(i<=0) or (i>130):
	print("Entradas:",i,"anos e IMC",IMC)
	print("Dados invalidos")
elif(i<45) and (IMC<22):
	x="Baixo"
elif(i>=45) and (IMC<22):
	x="Medio"
elif(i<45) and (IMC>=22):
	x="Medio"
elif(i>=45) and (IMC>=22):
	x="Baixo"
print("Entradas:",i,"anos e IMC",IMC)
print("Risco:",x)
-- EXECUTION TIME:
0.814236
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1691/2471/main.py", line 15, in <module>
    print("Risco:",x)
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 23:38:04) 
-- CODE:
i=int(input("digite a idade: "))
IMC=float(input("digitep imc: "))
if(i<=0) or (i>130):
	print("Entradas:",i,"anos e IMC",IMC)
	print("Dados invalidos")
elif(i<45) and (IMC<22):
	x="Baixo"
	print("Entradas:",i,"anos e IMC",IMC)
	print("Risco:",x)
elif(i>=45) and (IMC<22):
	x="Medio"
	print("Entradas:",i,"anos e IMC",IMC)
	print("Risco:",x)
elif(i<45) and (IMC>=22):
	x="Medio"
	print("Entradas:",i,"anos e IMC",IMC)
	print("Risco:",x)
elif(i>=45) and (IMC>=22):
	x="Baixo"
print("Entradas:",i,"anos e IMC",IMC)
print("Risco:",x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    print("Risco:",x)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-04 23:38:18) 
-- CODE:
i=int(input("digite a idade: "))
IMC=float(input("digitep imc: "))
if(i<=0) or (i>130):
	print("Entradas:",i,"anos e IMC",IMC)
	print("Dados invalidos")
elif(i<45) and (IMC<22):
	x="Baixo"
	print("Entradas:",i,"anos e IMC",IMC)
	print("Risco:",x)
elif(i>=45) and (IMC<22):
	x="Medio"
	print("Entradas:",i,"anos e IMC",IMC)
	print("Risco:",x)
elif(i<45) and (IMC>=22):
	x="Medio"
	print("Entradas:",i,"anos e IMC",IMC)
	print("Risco:",x)
elif(i>=45) and (IMC>=22):
	x="Baixo"
print("Entradas:",i,"anos e IMC",IMC)
print("Risco:",x)
-- EXECUTION TIME:
0.620873
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1691/2471/main.py", line 21, in <module>
    print("Risco:",x)
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-04 23:41:21) 
-- CODE:
i=int(input("digite a idade: "))
IMC=float(input("digitep imc: "))
if(i<=0) or (i>130):
	print("Entradas",i,"anos e",IMC)
	print("Dados invalidos")
elif(i<45) and (IMC<22):
	x="Baixo"
	print("Entradas",i,"anos e IMC",IMC)
	print("Risco:",x)
elif(i>=45) and (IMC<22):
	x="Medio"
	print("Entradas",i,"anos e IMC",IMC)
	print("Risco:",x)
elif(i<45) and (IMC>=22):
	x="Medio"
	print("Entradas",i,"anos e IMC",IMC)
	print("Risco:",x)
elif(i>=45) and (IMC>=22):
	x="Baixo"
	print("Entradas",i,"anos e IMC",IMC)
	print("Risco:",x)
-- EXECUTION TIME:
0.789125
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Entradas 0 anos e 0.0
Dados invalidos
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas 25 anos e IMC 25.0
Risco: Medio
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas 50 anos e IMC 25.0
Risco: Baixo
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 23:41:24) 
-- CODE:
i=int(input("digite a idade: "))
IMC=float(input("digitep imc: "))
if(i<=0) or (i>130):
	print("Entradas",i,"anos e",IMC)
	print("Dados invalidos")
elif(i<45) and (IMC<22):
	x="Baixo"
	print("Entradas",i,"anos e IMC",IMC)
	print("Risco:",x)
elif(i>=45) and (IMC<22):
	x="Medio"
	print("Entradas",i,"anos e IMC",IMC)
	print("Risco:",x)
elif(i<45) and (IMC>=22):
	x="Medio"
	print("Entradas",i,"anos e IMC",IMC)
	print("Risco:",x)
elif(i>=45) and (IMC>=22):
	x="Baixo"
	print("Entradas",i,"anos e IMC",IMC)
	print("Risco:",x)
-- OUTPUT:
Entradas 0 anos e 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-04 23:41:25) 
-- CODE:
i=int(input("digite a idade: "))
IMC=float(input("digitep imc: "))
if(i<=0) or (i>130):
	print("Entradas",i,"anos e",IMC)
	print("Dados invalidos")
elif(i<45) and (IMC<22):
	x="Baixo"
	print("Entradas",i,"anos e IMC",IMC)
	print("Risco:",x)
elif(i>=45) and (IMC<22):
	x="Medio"
	print("Entradas",i,"anos e IMC",IMC)
	print("Risco:",x)
elif(i<45) and (IMC>=22):
	x="Medio"
	print("Entradas",i,"anos e IMC",IMC)
	print("Risco:",x)
elif(i>=45) and (IMC>=22):
	x="Baixo"
	print("Entradas",i,"anos e IMC",IMC)
	print("Risco:",x)
-- EXECUTION TIME:
0.619748
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
digite a idade: digitep imc: Entradas 0 anos e 0.0
Dados invalidos
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
digite a idade: digitep imc: Entradas 25 anos e IMC 25.0
Risco: Medio
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
digite a idade: digitep imc: Entradas 50 anos e IMC 25.0
Risco: Baixo
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 23:41:30) 
-- CODE:
i=int(input("digite a idade: "))
IMC=float(input("digitep imc: "))
if(i<=0) or (i>130):
	print("Entradas",i,"anos e",IMC)
	print("Dados invalidos")
elif(i<45) and (IMC<22):
	x="Baixo"
	print("Entradas",i,"anos e IMC",IMC)
	print("Risco:",x)
elif(i>=45) and (IMC<22):
	x="Medio"
	print("Entradas",i,"anos e IMC",IMC)
	print("Risco:",x)
elif(i<45) and (IMC>=22):
	x="Medio"
	print("Entradas",i,"anos e IMC",IMC)
	print("Risco:",x)
elif(i>=45) and (IMC>=22):
	x="Baixo"
	print("Entradas",i,"anos e IMC",IMC)
	print("Risco:",x)
-- OUTPUT:
Entradas 0 anos e 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-04 23:41:42) 
-- CODE:
i=int(input("digite a idade: "))
IMC=float(input("digitep imc: "))
if(i<=0) or (i>130):
	print("Entradas",i,"anos e",IMC)
	print("Dados invalidos")
elif(i<45) and (IMC<22):
	x="Baixo"
	print("Entradas",i,"anos e IMC",IMC)
	print("Risco:",x)
elif(i>=45) and (IMC<22):
	x="Medio"
	print("Entradas",i,"anos e IMC",IMC)
	print("Risco:",x)
elif(i<45) and (IMC>=22):
	x="Medio"
	print("Entradas",i,"anos e IMC",IMC)
	print("Risco:",x)
elif(i>=45) and (IMC>=22):
	x="Baixo"
	print("Entradas",i,"anos e IMC",IMC)
	print("Risco:",x)
-- EXECUTION TIME:
0.695553
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Entradas 0 anos e 0.0
Dados invalidos
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas 25 anos e IMC 25.0
Risco: Medio
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas 50 anos e IMC 25.0
Risco: Baixo
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 23:44:50) 
-- CODE:
i=int(input("digite a idade: "))
IMC=float(input("digitep imc: "))
if(i<45) and (imc<22):
	x="Baixo"
elif(i>=45) and (imc<22):
	x="Medio"
elif(i<45) and (imc>=22):
	x="Medio"
elif(i>=45) and (imc>=22):
	x="Baixo"
	print("Entradas",i,"anos e",IMC)
	print("Risco:",x)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(i<45) and (imc<22):
NameError: name 'imc' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 23:55:36) 
-- CODE:
x=int(input("digite a idade:"))
y=float(input("digite imc:"))
if((x=0)or(x<0)or(x>130)):
	print("Entradas:",x,"anos e IMC",y)
	print("Dados invalidos")
elif((x<45)and(y<22)):
	z="Baixo"
elif((x>=45)and(y<22)):
	z="Medio"
elif((x<45)and(y>=22)):
	z="Medio"
elif((x>=45)and(y>=22)):
	z="Alto"
print("Entradas:",x,"anos e IMC",y)
print("Risco:",z)

-- ERROR:
File "XXXX", line 3
    if((x=0)or(x<0)or(x>130)):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 23:56:23) 
-- CODE:
x=int(input("digite a idade:"))
y=float(input("digite imc:"))
if((x<=0)or(x>130)):
	print("Entradas:",x,"anos e IMC",y)
	print("Dados invalidos")
elif((x<45)and(y<22)):
	z="Baixo"
elif((x>=45)and(y<22)):
	z="Medio"
elif((x<45)and(y>=22)):
	z="Medio"
elif((x>=45)and(y>=22)):
	z="Alto"
print("Entradas:",x,"anos e IMC",y)
print("Risco:",z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    print("Risco:",z)
NameError: name 'z' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-04 23:56:36) 
-- CODE:
x=int(input("digite a idade:"))
y=float(input("digite imc:"))
if((x<=0)or(x>130)):
	print("Entradas:",x,"anos e IMC",y)
	print("Dados invalidos")
elif((x<45)and(y<22)):
	z="Baixo"
elif((x>=45)and(y<22)):
	z="Medio"
elif((x<45)and(y>=22)):
	z="Medio"
elif((x>=45)and(y>=22)):
	z="Alto"
print("Entradas:",x,"anos e IMC",y)
print("Risco:",z)

-- EXECUTION TIME:
0.607395
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1691/2471/main.py", line 15, in <module>
    print("Risco:",z)
NameError: name 'z' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 23:56:44) 
-- CODE:
x=int(input("digite a idade:"))
y=float(input("digite imc:"))
if((x<=0)or(x>130)):
	print("Entradas:",x,"anos e IMC",y)
	print("Dados invalidos")
elif((x<45)and(y<22)):
	z="Baixo"
elif((x>=45)and(y<22)):
	z="Medio"
elif((x<45)and(y>=22)):
	z="Medio"
elif((x>=45)and(y>=22)):
	z="Alto"
print("Entradas:",x,"anos e IMC",y)
print("Risco:",z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    print("Risco:",z)
NameError: name 'z' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-04 23:57:16) 
-- CODE:
x=int(input("digite a idade:"))
y=float(input("digite imc:"))
if((x<=0)or(x>130)):
	print("Entradas:",x,"anos e IMC",y)
	print("Dados invalidos")
elif((x<45)and(y<22)):
	z="Baixo"
elif((x>=45)and(y<22)):
	z="Medio"
elif((x<45)and(y>=22)):
	z="Medio"
elif((x>=45)and(y>=22)):
	z="Alto"
print("Entradas:",x,"anos e IMC",y)
print("Risco:",z)

-- EXECUTION TIME:
0.557217
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1691/2471/main.py", line 15, in <module>
    print("Risco:",z)
NameError: name 'z' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 00:01:28) 
-- CODE:
x=int(input("digite a idade:"))
y=float(input("digite imc:"))
if((x<=0)or(x>130)):
	print("Entradas:",x,"anos e IMC",y)
	print("Dados invalidos")
elif((x<45)and(y<22)):
	z="Baixo"
elif((x>=45)and(y<22)):
	z="Medio"
elif((x<45)and(y>=22)):
	z="Medio"
elif((x>=45)and(y>=22)):
	z="Alto"
print("Entradas:",x,"anos e IMC",y)
print("Risco:",z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    print("Risco:",z)
NameError: name 'z' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 00:02:29) 
-- CODE:
x=int(input("digite a idade:"))
y=float(input("digite imc:"))
if((x<=0)or(x>130)):
	print("Entradas:",x,"anos e IMC",y)
	print("Dados invalidos")
elif((x<45)and(y<22)):
	z="Baixo"
elif((x>=45)and(y<22)):
	z="Medio"
elif((x<45)and(y>=22)):
	z="Medio"
elif((x>=45)and(y>=22)):
	z="Alto"
	print("Entradas:",x,"anos e IMC",y)
	print("Risco:",z)

-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 00:02:43) 
-- CODE:
x=int(input("digite a idade:"))
y=float(input("digite imc:"))
if((x<=0)or(x>130)):
	print("Entradas:",x,"anos e IMC",y)
	print("Dados invalidos")
elif((x<45)and(y<22)):
	z="Baixo"
elif((x>=45)and(y<22)):
	z="Medio"
elif((x<45)and(y>=22)):
	z="Medio"
elif((x>=45)and(y>=22)):
	z="Alto"
print("Entradas:",x,"anos e IMC",y)
print("Risco:",z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    print("Risco:",z)
NameError: name 'z' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 00:02:52) 
-- CODE:
x=int(input("digite a idade:"))
y=float(input("digite imc:"))
if((x<=0)or(x>130)):
	print("Entradas:",x,"anos e IMC",y)
	print("Dados invalidos")
elif((x<45)and(y<22)):
	z="Baixo"
elif((x>=45)and(y<22)):
	z="Medio"
elif((x<45)and(y>=22)):
	z="Medio"
elif((x>=45)and(y>=22)):
	z="Alto"
print("Entradas:",x,"anos e IMC",y)
print("Risco:",z)

-- EXECUTION TIME:
0.843692
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1691/2471/main.py", line 15, in <module>
    print("Risco:",z)
NameError: name 'z' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 23:07:41) 
-- CODE:
x=int(input("digite a idade:"))
y=float(input("digite imc:"))
if((x<=0)or(x>130)):
	print("Entradas:",x,"anos e IMC",y)
	print("Dados invalidos")
	elif((x<45)and(y<22)):
		z="Baixo"
	elif((x>=45)and(y<22)):
		z="Medio"
	elif((x<45)and(y>=22)):
		z="Medio"
	elif((x>=45)and(y>=22)):
		z="Alto"
print("Risco:",z)

-- ERROR:
File "XXXX", line 6
    elif((x<45)and(y<22)):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 23:07:44) 
-- CODE:
x=int(input("digite a idade:"))
y=float(input("digite imc:"))
if((x<=0)or(x>130)):
	print("Entradas:",x,"anos e IMC",y)
	print("Dados invalidos")
	elif((x<45)and(y<22)):
		z="Baixo"
	elif((x>=45)and(y<22)):
		z="Medio"
	elif((x<45)and(y>=22)):
		z="Medio"
	elif((x>=45)and(y>=22)):
		z="Alto"
print("Risco:",z)

-- ERROR:
File "XXXX", line 6
    elif((x<45)and(y<22)):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 23:08:18) 
-- CODE:
x=int(input("digite a idade:"))
y=float(input("digite imc:"))
if((x<=0)or(x>130)):
	print("Entradas:",x,"anos e IMC",y)
	print("Dados invalidos")
elif((x<45)and(y<22)):
	z="Baixo"
elif((x>=45)and(y<22)):
	z="Medio"
elif((x<45)and(y>=22)):
	z="Medio"
elif((x>=45)and(y>=22)):
	z="Alto"
print("Entradas:",x,"anos e IMC",y)
print("Risco:",z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    print("Risco:",z)
NameError: name 'z' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 23:08:40) 
-- CODE:
x=int(input("digite a idade:"))
y=float(input("digite imc:"))
if((x<=0)or(x>130)):
	print("Entradas:",x,"anos e IMC",y)
	print("Dados invalidos")
elif((x<45)and(y<22)):
	z="Baixo"
elif((x>=45)and(y<22)):
	z="Medio"
elif((x<45)and(y>=22)):
	z="Medio"
elif((x>=45)and(y>=22)):
	z="Alto"
print("Entradas:",x,"anos e IMC",y)
print("Risco:",z)

-- EXECUTION TIME:
0.699836
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1691/2471/main.py", line 15, in <module>
    print("Risco:",z)
NameError: name 'z' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 23:10:32) 
-- CODE:
x=int(input("digite a idade:"))
y=float(input("digite imc:"))
if((x<=0)or(x>130)or(y<=0)):
	print("Entradas:",x,"anos e IMC",y)
	print("Dados invalidos")
elif((x<45)and(y<22)):
	z="Baixo"
elif((x>=45)and(y<22)):
	z="Medio"
elif((x<45)and(y>=22)):
	z="Medio"
elif((x>=45)and(y>=22)):
	z="Alto"
print("Entradas:",x,"anos e IMC",y)
print("Risco:",z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    print("Risco:",z)
NameError: name 'z' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 23:10:33) 
-- CODE:
x=int(input("digite a idade:"))
y=float(input("digite imc:"))
if((x<=0)or(x>130)or(y<=0)):
	print("Entradas:",x,"anos e IMC",y)
	print("Dados invalidos")
elif((x<45)and(y<22)):
	z="Baixo"
elif((x>=45)and(y<22)):
	z="Medio"
elif((x<45)and(y>=22)):
	z="Medio"
elif((x>=45)and(y>=22)):
	z="Alto"
print("Entradas:",x,"anos e IMC",y)
print("Risco:",z)

-- EXECUTION TIME:
0.94839
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1691/2471/main.py", line 15, in <module>
    print("Risco:",z)
NameError: name 'z' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 23:10:34) 
-- CODE:
x=int(input("digite a idade:"))
y=float(input("digite imc:"))
if((x<=0)or(x>130)or(y<=0)):
	print("Entradas:",x,"anos e IMC",y)
	print("Dados invalidos")
elif((x<45)and(y<22)):
	z="Baixo"
elif((x>=45)and(y<22)):
	z="Medio"
elif((x<45)and(y>=22)):
	z="Medio"
elif((x>=45)and(y>=22)):
	z="Alto"
print("Entradas:",x,"anos e IMC",y)
print("Risco:",z)

-- EXECUTION TIME:
1.07105
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1691/2471/main.py", line 15, in <module>
    print("Risco:",z)
NameError: name 'z' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 23:10:42) 
-- CODE:
x=int(input("digite a idade:"))
y=float(input("digite imc:"))
if((x<=0)or(x>130)or(y<=0)):
	print("Entradas:",x,"anos e IMC",y)
	print("Dados invalidos")
elif((x<45)and(y<22)):
	z="Baixo"
elif((x>=45)and(y<22)):
	z="Medio"
elif((x<45)and(y>=22)):
	z="Medio"
elif((x>=45)and(y>=22)):
	z="Alto"
print("Entradas:",x,"anos e IMC",y)
print("Risco:",z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    print("Risco:",z)
NameError: name 'z' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 23:13:33) 
-- CODE:
x=int(input("digite a idade:"))
y=float(input("digite imc:"))
if((x<=0)or(x>130)or(y<=0)):
	print("Entradas:",x,"anos e IMC",y)
	print("Dados invalidos")
elif((x<45)and(y<22)):
	z="Baixo"
elif((x>=45)and(y<22)):
	z="Medio"
elif((x<45)and(y>=22)):
	z="Medio"
elif((x>=45)and(y>=22)):
	z="Alto"
print("Entradas:",x,"anos e IMC",y)
print("Risco:",z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    print("Risco:",z)
NameError: name 'z' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 23:14:17) 
-- CODE:
x=int(input("digite a idade:"))
y=float(input("digite imc:"))
if((x<=0)or(x>130)or(y<=0)):
	print("Entradas:",x,"anos e IMC",y)
	print("Dados invalidos")
elif((x<45)and(y<22)):
	z="Baixo"
elif((x>=45)and(y<22)):
	z="Medio"
elif((x<45)and(y>=22)):
	z="Medio"
elif((x>=45)and(y>=22)):
	z="Alto"
print("Entradas:",x,"anos e IMC",y)
print("Risco:",z)

-- EXECUTION TIME:
0.757003
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1691/2471/main.py", line 15, in <module>
    print("Risco:",z)
NameError: name 'z' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
